Update Readme to release